--- a/py/stats/stats5_anova.ipynb
+++ b/py/stats/stats5_anova.ipynb
@@ -6,16 +6,8 @@
    "metadata": {},
    "source": [
     "## ANOVA\n",
-    "-"
+    "- ANOVA (Analysis of Variance) is a statistical test used to compare the means of three or more independent groups to determine if there are significant differences between them"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "706f19ce-bf8c-4e4c-8fa8-215b48fda191",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "attachments": {
@@ -28,7 +20,7 @@
    "metadata": {},
    "source": [
     "## Q1 \n",
-    "- A manufacturing coy has purchased 3 new machines A, B, C of different makes and wishes to determin whether one of them is faster than the other in producing a certain item. From hourly production figures are observed at random from each machine and the results are given below\n",
+    "- A manufacturing coy has purchased 3 new machines A, B, C of different makes and wishes to determine whether one of them is faster than the other in producing a certain item. From hourly production figures are observed at random from each machine and the results are given below\n",
     "- Use ANOVA to test whether machines differ significantly.\n",
     "- ![image.png](attachment:42f62b18-67bf-4f79-ab73-70d1659ed2bd.png)\n",
     "- This is a One-Way ANOVA problem (Analysis of Variance).\n",
@@ -38,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "efc2b8b5-8a7f-41d9-b037-e196a8d14fea",
    "metadata": {},
    "outputs": [],
@@ -49,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "4fb2f65d-898a-49e9-abe6-b9c304125cf5",
    "metadata": {},
    "outputs": [],
