--- a/py/stats/stats5_ttest.ipynb
+++ b/py/stats/stats5_ttest.ipynb
@@ -6,18 +6,111 @@
    "metadata": {},
    "source": [
     "# Hypothesis Test - t test\n",
-    "- You have a single sample and want to determine if its mean is statistically different from a specific value (e.g., a known population mean, a target value).\n",
+    "- 1S :You have a single sample and want to determine if its mean is statistically different from a specific value (e.g., a known population mean, a target value).\n",
     "    - Comparing the average test score of a sample of students to the national average. \n",
-    "- You have two distinct, unrelated groups and want to see if there's a significant difference in their mean\n",
+    "- Independent, 2S : You have two distinct, unrelated groups and want to see if there's a significant difference in their mean\n",
     "    - Comparing the average performance of two different groups of employees who received different training methods\n",
-    "- You have two sets of data from the same individuals or matched pairs, and you want to assess if there's a significant difference between the means of these paired observations.\n",
+    "- Paired, 2S: You have two sets of data from the same individuals or matched pairs, and you want to assess if there's a significant difference between the means of these paired observations.\n",
     "    - Comparing a patient's blood pressure before and after receiving a specific medication"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c7ed6ba-39dc-423c-88a2-4c80453acf9a",
+   "metadata": {},
+   "source": [
+    "## Q1A : 1 sample t-test in python\n",
+    "- Ho : mu = 70  (if pvalue > 0.05) : failed to reject Ho\n",
+    "- Ha : mu != 70 (if pvalue < 0.05); reject Ho infavour of Ha"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "337733e5-ab10-4176-966f-f26e168814e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy import stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "e49428d1-0004-4caf-b189-079aba7114fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[72 75 78 70 73 76 71 74 77 79]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_data = np.array([72, 75, 78, 70, 73, 76, 71, 74, 77, 79])\n",
+    "print(sample_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "a8a9a367-d52e-46ce-9845-e896cd3078a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hypothesized_mean = 70"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "c1fdc500-b974-49ce-8368-730cb3e775e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.700096710803842 0.0011200178871001584\n"
+     ]
+    }
+   ],
+   "source": [
+    "t_statistic, p_value = stats.ttest_1samp(a=sample_data, popmean=hypothesized_mean)\n",
+    "print(t_statistic, p_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "454dd8c6-0371-4329-ae4d-3d141b7ad86a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conclusion: Reject the null hypothesis 0.0011200178871001584\n",
+      "The sample mean is significantly different from the hypothesized population mean.\n"
+     ]
+    }
+   ],
+   "source": [
+    "if p_value < alpha:\n",
+    "    print(\"Conclusion: Reject the null hypothesis\", p_value)\n",
+    "    print(\"The sample mean is significantly different from the hypothesized population mean.\")\n",
+    "else:\n",
+    "    print(\"Conclusion: Fail to reject the null hypothesis.\")\n",
+    "    print(\"There is no significant difference between the sample mean and the hypothesized population mean.\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cbe44a6-42f6-4df1-a4a6-39a70c6a3a3f",
+   "id": "a14d822c-a10b-4644-b4b2-f73bfa2e0577",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -27,7 +120,7 @@
    "id": "9ae3d152-1e73-4460-9061-b66da0cdc31d",
    "metadata": {},
    "source": [
-    "## Q1  : 20 samples with mean and std dev, known pop mean\n",
+    "## Q1B  : 20 samples with mean and std dev, known pop mean\n",
     "- A random sample of size 20 from a normal population mean 42 and std dev of 5.\n",
     "- Test the hypothesis that the population mean is 45. Use 5% level of significance\n",
     "- one-sample t-test, because:\n",
@@ -246,6 +339,7 @@
    "metadata": {},
    "source": [
     "## Q3 : Two Independent Samples\n",
+    "- Distinct Group\n",
     "- Two salesman A and B are working in a certain district.\n",
     "- From a sample survey conducted by Head office, the following results are obtained.\n",
     "- State whether there is significant differene in average sales between 2 salesman\n",
@@ -257,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 66,
    "id": "dc34599f-6a88-4fab-81a4-f67f73f6a6e8",
    "metadata": {},
    "outputs": [],
@@ -281,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 67,
    "id": "b5eab622-b829-4f84-927a-7f534d21afa5",
    "metadata": {},
    "outputs": [
@@ -308,7 +402,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 70,
+   "id": "75f8cedd-509f-4922-889a-1628003a411d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#help(ttest_ind)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "id": "9388e620-8250-45bd-91f0-d9820a9a40a0",
    "metadata": {},
    "outputs": [
@@ -323,7 +427,7 @@
    ],
    "source": [
     "# Two-sample t-test (Welch's test: unequal variances)\n",
-    "t_stat, p_value = ttest_ind(sales_A, sales_B, equal_var=False)\n",
+    "t_stat, p_value = ttest_ind(a=sales_A, b=sales_B, equal_var=False)\n",
     "\n",
     "print(f\"t-statistic = {t_stat:.3f}\")\n",
     "print(f\"p-value = {p_value:.5f}\")"
@@ -413,6 +517,7 @@
    "metadata": {},
    "source": [
     "## Dependent Samples (Paired Test)\n",
+    "- Same set of members, test before or after; looking for changes\n",
     "- Patients : before and after treatment\n",
     "- Students : before and after Python Training"
    ]
@@ -429,12 +534,13 @@
     "- Test at 5% significance level if the course was useful in terms of performance on the test\n",
     "- Hypothesis :\n",
     "    - Ho : mu1 = mu2, or mu2 - mu1 = 0 ;\n",
-    "    - Ha : mu1 < mu2 or mu2 - m1 > 0"
+    "    - Ha : mu1 != mu2 :\n",
+    "          - mu1 < mu2 or mu2 - m1 > 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 73,
    "id": "0a6f6dbc-8932-4651-946d-b210b4706280",
    "metadata": {},
    "outputs": [
@@ -442,29 +548,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[44 40 61 52 32 44 70 41 67 72 53 72] [53 38 69 57 46 39 73 48 73 74 60 78] \n",
+      "[44 40 61 52 32 44 70 41 67 72 53 72] \n",
+      " [53 38 69 57 46 39 73 48 73 74 60 78] \n",
       " 12 12\n"
      ]
     }
    ],
    "source": [
-    "# Paired observations (n=120)\n",
+    "# Paired observations\n",
     "import numpy as np\n",
     "from scipy.stats import ttest_rel\n",
     "before = np.array([44, 40, 61, 52, 32, 44, 70, 41, 67, 72, 53, 72])\n",
     "after  = np.array([53, 38, 69, 57, 46, 39, 73, 48, 73, 74, 60, 78])\n",
-    "print(before, after, '\\n' ,len(before), len(after))"
+    "print(before, '\\n', after, '\\n' ,len(before), len(after))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "9b7369a6-055b-4925-8e6a-c6fc5c1a1631",
+   "execution_count": 77,
+   "id": "89a66f8f-b7c5-4f99-a9ef-9f22977faca0",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#help(ttest_rel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "9b7369a6-055b-4925-8e6a-c6fc5c1a1631",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.445359719553577 0.005472667818346524\n"
+     ]
+    }
+   ],
+   "source": [
     "# Paired t-test\n",
-    "t_stat, p_value_two_tailed = ttest_rel(after, before)"
+    "t_stat, p_value_two_tailed = ttest_rel(a=after, b=before)\n",
+    "print(t_stat, p_value_two_tailed)"
    ]
   },
   {
@@ -534,17 +660,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e6563192-5d6e-436d-91ae-03f1426d8d0e",
+   "metadata": {},
+   "source": [
+    "# Two, 1 Tail (Left, <), 1 Tail (Right,>)\n",
+    "- Two tailed\n",
+    "    - Ho : mu1 = mu2 : mu1 - mu2 = 0\n",
+    "    - Ha : mu1 != mu2\n",
+    "    - ttest_rel(a, b, axis=0, nan_policy='propagate', alternative='two-sided') #paired2S\n",
+    "    - ttest_ind(a, b, axis=0, equal_var=True, alternative='two-sided')  #indep2S\n",
+    "- 1 Tail\n",
+    "    - Left (<)\n",
+    "        - Ha : mu1 < mu2\n",
+    "        - Ho : mu1 >= mu2 : mu1 - mu2 > 0\n",
+    "        - ttest_rel(a, b, axis=0, nan_policy='propagate', alternative='less')#paired2S\n",
+    "        - - ttest_ind(a, b, axis=0, equal_var=True, alternative='less')  #indep2S\n",
+    "    - Right (>)\n",
+    "        - Ha : mu1 > mu2\n",
+    "        - Ho : mu1 <= mu2 : mu1 - mu2 < 0\n",
+    "        - ttest_rel(a, b, axis=0, nan_policy='propagate', alternative='greater') #paired2S\n",
+    "        - ttest_ind(a, b, axis=0, equal_var=True, alternative='greater')  #indep2S"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7c3f81d0-7d02-46d3-af93-fea63abeedab",
+   "execution_count": 80,
+   "id": "0417e352-0dfa-4743-8d4b-fc49617e7ff1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#help(ttest_rel)\n",
+    "#ttest_rel(a, b, axis=0, nan_policy='propagate', alternative='two-sided', *, keepdims=False)\n",
+    "#alternative : {'two-sided', 'less', 'greater'},"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "77c202da-9b35-48af-aab9-6accb74751ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#help(ttest_ind)\n",
+    "#ttest_ind(a, b, axis=0, equal_var=True, alternative='two-sided')\n",
+    "#alternative : {'two-sided', 'less', 'greater'}"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0417e352-0dfa-4743-8d4b-fc49617e7ff1",
+   "id": "1bfe12cd-f4ec-4281-9db2-6e264708cb19",
    "metadata": {},
    "outputs": [],
    "source": []
