--- a/py/stats/stats5_ztest.ipynb
+++ b/py/stats/stats5_ztest.ipynb
@@ -7,13 +7,12 @@
    "source": [
     "# statistics - Z tests\n",
     "- a Z-test in Python involves using statistical libraries, primarily statsmodels or scipy.stats. The Z-test is suitable when the sample size is large (typically > 30) or the population standard deviation is known.\n",
-    "- statsmodels.stats.weightstats.ztest  (1S)\n",
-    "- "
+    "- statsmodels.stats.weightstats.ztest  (1S)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "id": "0f628652-b5a4-42cb-a8c0-320c4f1f0f47",
    "metadata": {},
    "outputs": [],
@@ -34,15 +33,15 @@
     "- a random sample of 900 members has a mean of 3.4 cms. Can it reasonably regarded as a sample from a large population of mean 3.25 cms and std deviation 2.61 cm\n",
     "- samples=900, sample_mean=3.4, pop_mean=3.25, pop_std = 2.61\n",
     "- Step 1: Hypotheses\n",
-    "- H0: sm  = 3.25 (sample comes from the population)\n",
-    "- H1: sm !=3.25 (sample does not come from the population)}\n",
+    "    - H0: sm  = 3.25 (sample comes from the population)\n",
+    "    - H1: sm !=3.25 (sample does not come from the population)}\n",
     "- ztest(data, value=mu) compares the sample mean of data to the hypothesized population mean mu.\n",
     "- It assumes known or large-sample variance, approximating a z-test."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "id": "4bdf57a8-c4a6-4802-a843-583c87aa012a",
    "metadata": {},
    "outputs": [],
@@ -58,38 +57,35 @@
    "outputs": [],
    "source": [
     "# Given data\n",
-    "xbar = 3.4\n",
-    "mu = 3.25\n",
-    "sigma = 2.61\n",
-    "n = 900"
+    "xbar = 3.4 #sample\n",
+    "mu = 3.25 #pop\n",
+    "sigma = 2.61 #std of pop\n",
+    "n = 900 #samples size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "id": "e3eac785-2413-40fe-b6a6-1d0ea3a2a761",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([7.51198559, 5.31628002, 4.27521987, 3.39914765, 2.44954735])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.447741569304853 [ 2.80470339  6.28537325 10.63288734  2.11354193  5.14723237]\n"
+     ]
     }
    ],
    "source": [
     "# generate data\n",
-    "data = np.random.normal(loc=xbar, scale=sigma, size=n)\n",
-    "data[0:5]"
+    "data = np.random.normal(loc=3.4, scale=2.61, size=900)\n",
+    "print(np.mean(data), data[0:5])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "id": "2de2daac-db22-4fa9-83cb-592b729be718",
    "metadata": {},
    "outputs": [
@@ -97,16 +93,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Z-statistic: 1.2608382954163515\n",
-      "p-value: 0.20736711329292368\n"
+      "Z-statistic: 2.2629190481945294\n",
+      "p-value: 0.023640679954900195\n"
      ]
     }
    ],
    "source": [
     "# Perform one-sample z-test\n",
-    "z_stat, p_value = ztest(data, value=mu)\n",
+    "z_stat, p_value = ztest(x1=data, value=mu)\n",
     "print(\"Z-statistic:\", z_stat)\n",
     "print(\"p-value:\", p_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "02b019c5-85c2-4e88-b078-517e4e3acb91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pvalue < 0.05 : Reject Ho in favor of Ha"
    ]
   },
   {
