--- a/py/stats/stats5_chisq.ipynb
+++ b/py/stats/stats5_chisq.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "5aab9c32-9f25-4366-9fa2-6fd417c819c3",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "049b5d8f-60ec-4f47-a0d8-0d49fe19d7f1",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
        "       [18,  6]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "0a151dcb-baed-43b5-bee2-8296c927b8a4",
    "metadata": {},
    "outputs": [
@@ -111,6 +111,14 @@
     "- p = 0.79 > 0.05 : Fail to reject Ho\n",
     "- There is no significant association between whether people drink and their opinion on local sale of liquor at the 5% level.\n",
     "- The data do not provide evidence of a relationship between drinking habits and opinion on local liquor sale — the two responses appear to be independent.z"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9298e1a-2b90-481d-a7d0-17e0cef104b2",
+   "metadata": {},
+   "source": [
+    "#### A common university student scenario for a chi-square test is to determine if there is a relationship (association or independence) between two categorical variables, such as gender and choice of academic major. "
    ]
   },
   {
