--- a/assign/studentQueries.ipynb
+++ b/assign/studentQueries.ipynb
@@ -25,7 +25,11 @@
     "- Def function ---- Sultana\n",
     "    - piit/py/others/functions.ipynb\n",
     "- Creating report to the Manager ----- Jugurtha\n",
-    "    - piit/misc/reportWriting.ipynb"
+    "    - piit/misc/reportWriting.ipynb\n",
+    "## Quiz Test\n",
+    "- ....\n",
+    "## Interview Questions\n",
+    "- ..."
    ]
   },
   {
