--- a/sql/sqlD4A_gb.ipynb
+++ b/sql/sqlD4A_gb.ipynb
@@ -24,7 +24,8 @@
     "# Steps\n",
     "- Make sure you have installed Mysql\n",
     "- Check if MySQL is running\n",
-    "- Goto folder of MySQL in Win \n",
+    "- Goto folder of MySQL in Win\n",
+    "    - cd c:/program files/mysql/mysqlserver 8.0/bin\n",
     "- mysql -u piuser -p  (or root user / pwd) : Pass@123\n",
     "- if you get mysql> prompt that means your login is successful\n",
     "- mysql commands\n",
@@ -99,8 +100,8 @@
     "('2025-01-06', 'West',   'Diana',   'Laptop',   1, 1200.00),\n",
     "('2025-01-07', 'North',  'Alice',   'Laptop',   1, 1200.00),\n",
     "('2025-01-07', 'South',  'Bob',     'Monitor',  1, 300.00);\n",
-    "### See the data\n",
-    "- SELECT * from sales1;"
+    "### See the first 3 rows of data\n",
+    "- SELECT * from sales1 limit 3;"
    ]
   },
   {
@@ -292,12 +293,158 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "61e349a0-5dad-4b3c-87e2-0a9d75149f6c",
+   "metadata": {},
+   "source": [
+    "## Views\n",
+    "DROP TABLE IF EXISTS customers;\n",
+    "DROP TABLE IF EXISTS products;\n",
+    "DROP TABLE IF EXISTS orders;\n",
+    "DROP TABLE IF EXISTS order_items;\n",
+    "\n",
+    "-- Customers table\n",
+    "CREATE TABLE customers (\n",
+    "    customer_id INT AUTO_INCREMENT PRIMARY KEY,\n",
+    "    customer_name VARCHAR(50),\n",
+    "    country VARCHAR(30)\n",
+    ");\n",
+    "\n",
+    "-- Products table\n",
+    "CREATE TABLE products (\n",
+    "    product_id INT AUTO_INCREMENT PRIMARY KEY,\n",
+    "    product_name VARCHAR(50),\n",
+    "    category VARCHAR(30),\n",
+    "    price DECIMAL(10,2)\n",
+    ");\n",
+    "\n",
+    "-- Orders table\n",
+    "CREATE TABLE orders (\n",
+    "    order_id INT AUTO_INCREMENT PRIMARY KEY,\n",
+    "    customer_id INT,\n",
+    "    order_date DATE,\n",
+    "    FOREIGN KEY (customer_id) REFERENCES customers(customer_id)\n",
+    ");\n",
+    "\n",
+    "-- Order items table\n",
+    "CREATE TABLE order_items (\n",
+    "    order_item_id INT AUTO_INCREMENT PRIMARY KEY,\n",
+    "    order_id INT,\n",
+    "    product_id INT,\n",
+    "    quantity INT,\n",
+    "    amount DECIMAL(10,2),\n",
+    "    FOREIGN KEY (order_id) REFERENCES orders(order_id),\n",
+    "    FOREIGN KEY (product_id) REFERENCES products(product_id)\n",
+    ");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4862123-a907-4003-9f05-3ad455444208",
+   "metadata": {},
+   "source": [
+    "-- Customers\n",
+    "INSERT INTO customers (customer_name, country) VALUES\n",
+    "('Alice', 'USA'),\n",
+    "('Bob', 'India'),\n",
+    "('Charlie', 'UK'),\n",
+    "('Diana', 'USA');\n",
+    "\n",
+    "-- Products\n",
+    "INSERT INTO products (product_name, category, price) VALUES\n",
+    "('Laptop', 'Electronics', 1200.00),\n",
+    "('Tablet', 'Electronics', 600.00),\n",
+    "('Phone', 'Electronics', 800.00),\n",
+    "('Mouse', 'Accessories', 25.00);\n",
+    "\n",
+    "-- Orders\n",
+    "INSERT INTO orders (customer_id, order_date) VALUES\n",
+    "(1, '2025-01-02'),\n",
+    "(2, '2025-01-03'),\n",
+    "(3, '2025-01-04'),\n",
+    "(1, '2025-01-05');\n",
+    "\n",
+    "-- Order Items\n",
+    "INSERT INTO order_items (order_id, product_id, quantity, amount) VALUES\n",
+    "(1, 1, 1, 1200.00),  -- Alice Laptop\n",
+    "(1, 4, 2, 50.00),    -- Alice Mouse\n",
+    "(2, 3, 1, 800.00),   -- Bob Phone\n",
+    "(3, 2, 1, 600.00),   -- Charlie Tablet\n",
+    "(4, 1, 1, 1200.00);  -- Alice Laptop again"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3331338-2fd1-4843-911c-fb0ac0187af6",
+   "metadata": {},
+   "source": [
+    "CREATE VIEW customer_view AS\n",
+    "SELECT customer_id, customer_name, country\n",
+    "FROM customers;"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28f20384-d0f6-4a8c-85d7-405126872634",
+   "id": "69d1e6e9-91e7-42aa-8212-979033e4ec8c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "CREATE VIEW order_details_view AS\n",
+    "SELECT \n",
+    "    o.order_id,\n",
+    "    o.order_date,\n",
+    "    c.customer_name,\n",
+    "    oi.product_id,\n",
+    "    p.product_name,\n",
+    "    oi.quantity,\n",
+    "    oi.amount\n",
+    "FROM orders o\n",
+    "JOIN customers c ON o.customer_id = c.customer_id\n",
+    "JOIN order_items oi ON o.order_id = oi.order_id\n",
+    "JOIN products p ON oi.product_id = p.product_id;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf320ce9-deca-4e81-af3a-81c7dd7d3ee9",
+   "metadata": {},
+   "source": [
+    "CREATE VIEW product_sales_view AS\n",
+    "SELECT \n",
+    "    p.product_name,\n",
+    "    SUM(oi.quantity) AS total_units_sold,\n",
+    "    SUM(oi.amount) AS total_sales\n",
+    "FROM products p\n",
+    "JOIN order_items oi ON p.product_id = oi.product_id\n",
+    "GROUP BY p.product_name;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ddda3a09-7ca8-45e7-b673-a75cb57126c8",
+   "metadata": {},
+   "source": [
+    "CREATE VIEW customer_public_view AS\n",
+    "SELECT customer_name, country\n",
+    "FROM customers;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43e5034d-3391-4797-a031-d57cf59fddc2",
+   "metadata": {},
+   "source": [
+    "CREATE VIEW customer_sales_summary AS\n",
+    "SELECT \n",
+    "    c.customer_name,\n",
+    "    SUM(oi.amount) AS total_spent,\n",
+    "    COUNT(o.order_id) AS total_orders\n",
+    "FROM customers c\n",
+    "LEFT JOIN orders o ON c.customer_id = o.customer_id\n",
+    "LEFT JOIN order_items oi ON o.order_id = oi.order_id\n",
+    "GROUP BY c.customer_name;"
+   ]
   }
  ],
  "metadata": {
