--- a/sql/sqlD4A_gb.ipynb
+++ b/sql/sqlD4A_gb.ipynb
@@ -150,19 +150,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b85d958-0622-4550-a0c4-3dd19910270f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "70fcce8e-21bf-4e2a-8eb1-84480f17ac67",
    "metadata": {},
    "source": [
-    "# Example 2\n",
+    "# Practise Case - Example 2\n",
     "- Drop table if it already exists (optional)\n",
     "    - DROP TABLE IF EXISTS sales2;\n",
     "- Create the sales table\n",
