--- a/sql/sqlD4A_gb.ipynb
+++ b/sql/sqlD4A_gb.ipynb
@@ -207,11 +207,9 @@
     "- SELECT year, country, product, SUM(profit) AS profit  FROM sales2 GROUP BY year, country, product;\n",
     "- SELECT year, country, product, SUM(profit) AS profit  FROM sales2 GROUP BY year, country, product WITH ROLLUP;\n",
     "### Advanced Rollup\n",
-    "- SELECT year, country, product, SUM(profit) AS profit, GROUPING(year) AS grp_year, GROUPING(country) AS grp_country,\n",
-    "         GROUPING(product) AS grp_product  FROM sales2  GROUP BY year, country, product WITH ROLLUP;\n",
+    "- SELECT year, country, product, SUM(profit) AS profit, GROUPING(year) AS grp_year, GROUPING(country) AS grp_country,  GROUPING(product) AS grp_product  FROM sales2  GROUP BY year, country, product WITH ROLLUP;\n",
     "- Alternative Query\n",
-    "    -  SELECT year, country, product, SUM(profit) AS profit,    GROUPING(year) AS grp_year,GROUPING(country) AS grp_country,\n",
-    "    GROUPING(product) AS grp_productFROM sales2 GROUP BY ROLLUP (year, country, product);"
+    "    -  SELECT COALESCE(year, 'ALL YEARS') AS year_group,   COALESCE(country, 'ALL COUNTRIES') AS country_group,   COALESCE(product, 'ALL PRODUCTS') AS product_group,    SUM(profit) AS profit FROM sales2 GROUP BY year, country, product WITH ROLLUP;"
    ]
   },
   {
