--- a/sql/sqlD4A_gb.ipynb
+++ b/sql/sqlD4A_gb.ipynb
@@ -284,6 +284,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "68bf5313-526e-4c2b-884f-e47a4f6cd73e",
+   "metadata": {},
+   "source": [
+    "## VIEWS in sql\n",
+    "- In SQL, a view is a virtual table based on the result-set of an SQL SELECT statement. It does not store data physically but rather acts as a dynamic window into the data stored in one or more underlying base tables. \n",
+    "- Here are the key characteristics and uses of SQL views:\n",
+    "    - Virtual Table: Views behave like regular tables, having rows and columns, but they are not physically stored in the database as separate data structures. Their content is dynamically generated whenever they are queried.\n",
+    "    - Based on a Query: A view is defined by a SELECT statement, which specifies the columns and rows to be included from the underlying tables.\n",
+    "    - Simplifying Complex Queries: Views can encapsulate complex joins, aggregations, and filtering logic, allowing users to query the view as if it were a simple table, thus making queries more readable and manageable.\n",
+    "    - Security and Data Access Control: Views can be used to restrict access to sensitive data. By creating a view that exposes only a subset of columns or rows from a base table, you can grant users access to the view without giving them direct access to the entire base table. \n",
+    "    - Data Presentation: Views can present data in a customized format, combining information from multiple tables or transforming data to meet specific reporting or application requirements."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "61e349a0-5dad-4b3c-87e2-0a9d75149f6c",
    "metadata": {},
    "source": [
@@ -294,38 +309,17 @@
     "DROP TABLE IF EXISTS order_items;\n",
     "\n",
     "-- Customers table\n",
-    "CREATE TABLE customers (\n",
-    "    customer_id INT AUTO_INCREMENT PRIMARY KEY,\n",
-    "    customer_name VARCHAR(50),\n",
-    "    country VARCHAR(30)\n",
-    ");\n",
+    "CREATE TABLE customers (     customer_id INT AUTO_INCREMENT PRIMARY KEY,    customer_name VARCHAR(50),    country VARCHAR(30));\n",
     "\n",
     "-- Products table\n",
-    "CREATE TABLE products (\n",
-    "    product_id INT AUTO_INCREMENT PRIMARY KEY,\n",
-    "    product_name VARCHAR(50),\n",
-    "    category VARCHAR(30),\n",
-    "    price DECIMAL(10,2)\n",
-    ");\n",
+    "CREATE TABLE products (    product_id INT AUTO_INCREMENT PRIMARY KEY,    product_name VARCHAR(50),    category VARCHAR(30),    price DECIMAL(10,2));\n",
     "\n",
     "-- Orders table\n",
-    "CREATE TABLE orders (\n",
-    "    order_id INT AUTO_INCREMENT PRIMARY KEY,\n",
-    "    customer_id INT,\n",
-    "    order_date DATE,\n",
-    "    FOREIGN KEY (customer_id) REFERENCES customers(customer_id)\n",
-    ");\n",
+    "CREATE TABLE orders (    order_id INT AUTO_INCREMENT PRIMARY KEY,    customer_id INT,    order_date DATE,    FOREIGN KEY (customer_id) REFERENCES customers(customer_id) );\n",
     "\n",
     "-- Order items table\n",
-    "CREATE TABLE order_items (\n",
-    "    order_item_id INT AUTO_INCREMENT PRIMARY KEY,\n",
-    "    order_id INT,\n",
-    "    product_id INT,\n",
-    "    quantity INT,\n",
-    "    amount DECIMAL(10,2),\n",
-    "    FOREIGN KEY (order_id) REFERENCES orders(order_id),\n",
-    "    FOREIGN KEY (product_id) REFERENCES products(product_id)\n",
-    ");"
+    "CREATE TABLE order_items (    order_item_id INT AUTO_INCREMENT PRIMARY KEY,    order_id INT,    product_id INT,    quantity INT,    amount DECIMAL(10,2),\n",
+    "    FOREIGN KEY (order_id) REFERENCES orders(order_id),    FOREIGN KEY (product_id) REFERENCES products(product_id));"
    ]
   },
   {
@@ -334,25 +328,14 @@
    "metadata": {},
    "source": [
     "-- Customers\n",
-    "INSERT INTO customers (customer_name, country) VALUES\n",
-    "('Alice', 'USA'),\n",
-    "('Bob', 'India'),\n",
-    "('Charlie', 'UK'),\n",
-    "('Diana', 'USA');\n",
+    "INSERT INTO customers (customer_name, country) VALUES('Alice', 'USA'),('Bob', 'India'),('Charlie', 'UK'),('Diana', 'USA');\n",
     "\n",
     "-- Products\n",
-    "INSERT INTO products (product_name, category, price) VALUES\n",
-    "('Laptop', 'Electronics', 1200.00),\n",
-    "('Tablet', 'Electronics', 600.00),\n",
-    "('Phone', 'Electronics', 800.00),\n",
+    "INSERT INTO products (product_name, category, price) VALUES ('Laptop', 'Electronics', 1200.00), ('Tablet', 'Electronics', 600.00),('Phone', 'Electronics', 800.00),\n",
     "('Mouse', 'Accessories', 25.00);\n",
     "\n",
     "-- Orders\n",
-    "INSERT INTO orders (customer_id, order_date) VALUES\n",
-    "(1, '2025-01-02'),\n",
-    "(2, '2025-01-03'),\n",
-    "(3, '2025-01-04'),\n",
-    "(1, '2025-01-05');\n",
+    "INSERT INTO orders (customer_id, order_date) VALUES (1, '2025-01-02'),(2, '2025-01-03'),(3, '2025-01-04'),(1, '2025-01-05');\n",
     "\n",
     "-- Order Items\n",
     "INSERT INTO order_items (order_id, product_id, quantity, amount) VALUES\n",
@@ -435,6 +418,92 @@
     "LEFT JOIN order_items oi ON o.order_id = oi.order_id\n",
     "GROUP BY c.customer_name;"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c82d9b0c-6dd9-4256-b901-e6c243adad16",
+   "metadata": {},
+   "source": [
+    "## Common Table Expressions (CTEs) : View vs With\n",
+    "- In SQL, a view is a virtual table based on the result-set of an SQL SELECT statement. It does not store data physically but rather acts as a dynamic window into the data stored in one or more underlying base tables. \n",
+    "Here are the key characteristics and uses of SQL views:\n",
+    "- Virtual Table: Views behave like regular tables, having rows and columns, but they are not physically stored in the database as separate data structures. Their content is dynamically generated whenever they are queried.\n",
+    "Based on a Query: A view is defined by a SELECT statement, which specifies the columns and rows to be included from the underlying tables.\n",
+    "- Simplifying Complex Queries: Views can encapsulate complex joins, aggregations, and filtering logic, allowing users to query the view as if it were a simple table, thus making queries more readable and manageable.\n",
+    "- Security and Data Access Control: Views can be used to restrict access to sensitive data. By creating a view that exposes only a subset of columns or rows from a base table, you can grant users access to the view without giving them direct access to the entire base table. \n",
+    "Data Presentation: Views can present data in a customized format, combining information from multiple tables or transforming data to meet specific reporting or application requirements."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8bfbb86-5a46-4eb8-80f6-e008072bfdcb",
+   "metadata": {},
+   "source": [
+    "## VIEW\n",
+    "- A VIEW is a virtual table based on the result-set of a SQL query. It is a database object, meaning its definition is stored in the database and can be referenced by multiple queries and users. \n",
+    "- CREATE VIEW CustomerOrders AS\n",
+    "SELECT c.CustomerID, c.CustomerName, o.OrderID, o.OrderDate\n",
+    "FROM Customers c\n",
+    "JOIN Orders o ON c.CustomerID = o.CustomerID;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c356821d-888f-40ef-957a-1d9d5b0aa792",
+   "metadata": {},
+   "source": [
+    "##  WITH\n",
+    "- WITH Clause (Common Table Expression - CTE):\n",
+    "- A WITH clause defines a temporary, named result set that exists only for the duration of a single SQL query. It is not a database object and cannot be referenced outside the query in which it is defined.\n",
+    "- WITH RecentOrders AS (\n",
+    "    SELECT OrderID, OrderDate, CustomerID\n",
+    "    FROM Orders\n",
+    "    WHERE OrderDate >= '2025-01-01'\n",
+    ")\n",
+    "SELECT c.CustomerName, r.OrderID, r.OrderDate\n",
+    "FROM Customers c\n",
+    "JOIN RecentOrders r ON c.CustomerID = r.CustomerID;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e83294e1-d0f5-433a-b7a5-e4f9a9797db0",
+   "metadata": {},
+   "source": [
+    "### Key Differences: View and With\n",
+    "- Persistence:\n",
+    "    - VIEW: Persistent database object, stored in the database schema.\n",
+    "    - WITH clause: Temporary, exists only for the duration of the query.\n",
+    "- Scope:\n",
+    "    - VIEW: Accessible by any authorized user and query within the database.\n",
+    "    - WITH clause: Local to the specific query in which it's defined.\n",
+    "- Reusability:\n",
+    "    - VIEW: Designed for repeated use across multiple queries and applications.\n",
+    "    - WITH clause: Primarily for structuring complex logic within a single query, but can be referenced multiple times within that same query.\n",
+    "- Security and Permissions:\n",
+    "    - VIEW: Can be used to provide a restricted or customized view of underlying data, allowing for granular permission management.\n",
+    "    - WITH clause: Does not offer separate security or permission mechanisms; it inherits the permissions of the user running the query.\n",
+    "- Complexity Hiding:\n",
+    "    - VIEW: Can encapsulate complex joins and calculations, presenting a simplified interface to users.\n",
+    "    - WITH clause: Helps break down complex queries into more manageable, readable parts within a single query.\n",
+    "- In essence, VIEWS are for creating reusable, persistent virtual tables for broader access and abstraction, while WITH clauses are for improving the readability and organization of complex logic within a single, temporary query."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d607c27-51b9-415d-a558-fac5d248ea6b",
+   "metadata": {},
+   "source": [
+    "## End of file - Group by and Views"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "102c9eb7-defa-433a-95f2-bea3170575c2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
