--- a/sql/sqlD4A_gb.ipynb
+++ b/sql/sqlD4A_gb.ipynb
@@ -18,6 +18,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "95230949-cd47-4259-9617-f9d9ba8fce17",
+   "metadata": {},
+   "source": [
+    "## SELECT department, COUNT(employee_id) AS total_employees, AVG(salary) AS average_salary ## columns and aggregation\n",
+    "## FROM employees                  # select table\n",
+    "## WHERE hire_date > '2020-01-01'  # before groupby - compile groupby of only employees whose hire date > X\n",
+    "## GROUP BY department             # this is for grouping\n",
+    "## HAVING COUNT(employee_id) > 5   # after groupby - list only those depts which more than 5 employees\n",
+    "## ORDER BY average_salary DESC;   # after groupby  - sort table summary by avg_sal in desc order"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b14b8cb2-345f-4304-9963-8ab6f9ccf96e",
    "metadata": {},
    "source": [
